fix: Fixes dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,12 +72,10 @@
 }
 
 
-/*@layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
+@layer base {
   body {
-    @apply bg-background text-foreground;
+    background-color: var(--background);
+    color: var(--foreground);
   }
 }
-*/
+
